# rusty-kingdom

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md  buf.yaml  compose.yaml  rauthy-config-local.toml  renovate.json  rustfmt.toml  sample.env
.github/workflows/: buf-ci.yaml  container-ci.yaml  container-latest.yaml  container-nightly.yaml  nightly-release.yaml  nightly.yaml  release.yaml  rust-ci.yaml  test.yaml
crud-client/: Cargo.toml  build.rs
crud-client/src/: main.rs
crud-server/: Cargo.toml  build.rs
crud-server/src/: main.rs  service.rs
crud-server/src/handler/: mod.rs
game-bot-example/: Cargo.toml  build.rs
game-bot-example/src/: main.rs
game-client/: Cargo.toml  build.rs
game-client/src/: main.rs
game-frontend/: Cargo.toml  build.rs  nginx.conf
game-frontend/locales/: en.toml  fr.toml
game-frontend/src/: app.rs  main.rs
game-frontend/src/views/: building_detail.rs  building_list.rs  fortress_building_list.rs  fortress_detail.rs  fortress_list.rs  home.rs  mod.rs  nav_menu.rs  not_found.rs
game-server/: Cargo.toml  build.rs
game-server/src/: auth.rs  main.rs  service.rs
game-server/src/handler/: building.rs
leptos-client/: Cargo.toml
leptos-client/src/: app.rs  main.rs
migration/: Cargo.toml
migration/src/: main.rs
proto/: common.proto  crud.proto  game.proto
proto/common/v1/: common.proto
proto/crud/v1/: crud.proto
proto/game/v1/: game.proto
rauthy-init/: Cargo.toml
rauthy-init/src/: main.rs
rusty/: Cargo.toml
rusty-crud-client/: Cargo.toml  build.rs
rusty-crud-client/src/: main.rs
rusty-crud-server/: Cargo.toml
rusty-crud-server/src/: main.rs  trace.rs
rusty-crud-server/src/handler/: building.rs  fortress.rs  mod.rs
rusty-crud-server/src/router/: mod.rs
rusty-game-client/: Cargo.toml  build.rs
rusty-game-client/src/: main.rs
rusty-game-server/: Cargo.toml  build.rs
rusty-game-server/src/: main.rs  service.rs
rusty-game-server/src/handler/: building.rs  fortress.rs  mod.rs
rusty-game-server/src/router/: mod.rs
rusty-migration/: Cargo.toml
rusty-migration/src/: main.rs
rusty/migrations/2024-11-03-014122_create_fortresses/: down.sql  up.sql
rusty/migrations/2024-11-03-014303_create_buildings/: down.sql  up.sql
rusty/migrations/2025-09-20-000052_create_fonctions/: down.sql  up.sql
rusty/src/: lib.rs  models.rs  schema.rs
rusty/src/request/: mod.rs
rusty/src/request/crud/: building.rs  fortress.rs
rusty/src/request/game/: building.rs  fortress.rs  mod.rs
src/: fortress.rs  lib.rs  main.rs  models.rs  schema.rs
src/database/: building.rs  fortress.rs  mod.rs
src/handler/: building.rs  fortress.rs  game.rs  mod.rs
src/request/: building.rs  fortress.rs  game.rs  mod.rs
