[workspace]
resolver = "3"
members = [
	"rusty",
	"crud-client",
	"crud-server",
	"game-bot-example",
	"game-client",
	"game-frontend",
	"game-server",
	"migration",
	"rauthy-init",
]

package.version = "0.12.2"
package.edition = "2024"

[workspace.dependencies]
# cli
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# ORM
diesel = { version = "2", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2", features = ["postgres"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# async
tokio = { version = "1.51", features = ["full"] }
# gRPC / protobuf
prost = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc", "tls-native-roots"] }
tonic-web = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
# http
reqwest = { version = "0.13", features = ["blocking", "json"] }
# JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
# from clippy::restriction
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
