cargo-features = ["panic-immediate-abort"]

[workspace]
resolver = "3"
members = [
	"rusty",
	"crud-client",
	"crud-server",
	"game-bot-example",
	"game-client",
	"game-frontend",
	"game-server",
	"migration",
	"rauthy-init",
]

package.version = "0.12.3"
package.edition = "2024"

[workspace.dependencies]
# cli
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# ORM
diesel = { version = "2", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2", features = ["postgres"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# async
tokio = { version = "1", features = ["full"] }
# gRPC / protobuf
prost = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc", "tls-native-roots"] }
tonic-web = "0.14"
tonic-web-wasm-client = "0.9"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
# http
reqwest = { version = "0.13", features = ["blocking", "json"] }
tower-http = { version = "0.6", features = ["cors"] }
# JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# leptos
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_i18n = { version = "0.6", features = ["csr"] }
leptos_i18n_build = { version = "0.6", features = ["csr"] }
# TODO: use the official version of leptos_oidc when this MR is merged: https://gitlab.com/kerkmann/leptos_oidc/-/merge_requests/14
# leptos_oidc = "0.9"
leptos_oidc = { git = "https://gitlab.com/alisterd51/leptos_oidc.git", branch = "chore/update-dependencies" }

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
# from clippy::restriction
dbg_macro = "deny"
exit = "deny"
expect_used = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
lossy_float_literal = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
precedence_bits = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
str_to_string = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

[profile.wasm-release]
inherits = "release"
panic = "immediate-abort"
opt-level = "z"

[profile.bench]
panic = "unwind"
