[package]
name = "crud-server"
version.workspace = true
edition.workspace = true

[dependencies]
rusty = { path = "../rusty" }
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio.workspace = true
diesel.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
