[package]
name = "game-client"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
