[package]
name = "game-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
# leptos
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_i18n = { version = "0.6", features = ["csr"] }
# gRPC / protobuf
tonic-web-wasm-client = "0.8"
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-prost = "0.14"
prost = "0.14"

[build-dependencies]
# leptos
leptos_i18n_build = { version = "0.6", features = ["csr"] }
# gRPC / protobuf
tonic-prost-build = "0.14"

[lints]
workspace = true
