[package]
name = "game-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
# leptos
leptos.workspace = true
leptos_router.workspace = true
leptos_i18n.workspace = true
leptos_oidc.workspace = true
# gRPC / protobuf
prost.workspace = true
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-web-wasm-client.workspace = true
tonic-prost.workspace = true

[build-dependencies]
# leptos
leptos_i18n_build.workspace = true
# gRPC / protobuf
tonic-prost-build.workspace = true

[lints]
workspace = true
