[package]
name = "game-server"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
tonic-web.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
