[package]
name = "game-server"
version.workspace = true
edition.workspace = true

[dependencies]
# tracing
tracing.workspace = true
tracing-subscriber.workspace = true
# serialization
serde.workspace = true
serde_json.workspace = true
# async
tokio.workspace = true
# gRPC / protobuf
prost.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tonic-prost.workspace = true
# http
reqwest.workspace = true
tower-http = { version = "0.6.8", features = ["cors"] }
# JWT
jsonwebtoken.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
