[package]
name = "rusty-crud-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusty = { path = "../rusty" }
axum.workspace = true
bb8.workspace = true
diesel.workspace = true
diesel-async.workspace = true
tokio.workspace = true
serde.workspace = true

# tracing
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[lints]
workspace = true
