[package]
name = "rusty-crud-server"
version.workspace = true
edition.workspace = true

[dependencies]
rusty = { path = "../rusty" }
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
diesel.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
