[package]
name = "rusty-game-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusty = { path = "../rusty" }
clap.workspace = true
clap_complete.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
