[package]
name = "rusty-game-client"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
